--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <table pardot-repeatable="" class="row collapse"><tbody><tr>
         <th class="no-bottom-padding small-12 large-12 columns first last" pardot-region="header_image"><table><tr><th>
-            <a href="https://www.voyagersopris.com/info/ar-letrs/?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_REG_AR_LETRS_Pathway_teacher"><img src="assets/img/Ohio-LETRS-EC-hdr.jpg" style="font-size: 24px;line-height:30px;background-color:#005587;color:#ffffff;text-align:center;" alt=""></a>
+            <a href="https://www.voyagersopris.com/professional-development/early-childhood-letrs/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_REG_AR_LETRS_Pathway_teacher"><img src="assets/img/Ohio-LETRS-EC-hdr.jpg" style="font-size: 24px;line-height:30px;background-color:#005587;color:#ffffff;text-align:center;" alt=""></a>
         </th></tr></table></th>
     </tr></tbody></table>
     <table pardot-repeatable="" class="row"><tbody><tr>
@@ -100,7 +100,7 @@
 
 
 <div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Achieve Your Five-Star Rating for Ohio’s Step Up To Quality Standards<br><strong>HIDDEN
-        TEASER:</strong> Provide access to state-approved PD credits with <em>LETRS for Early Childhood Educators</em></div>
+        TEASER:</strong> Provide access to state-approved PD credits with LETRS for Early Childhood Educators</div>
 
 			</center>
 		</td>
