--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <th class="small-12 large-12 columns first last" pardot-region="body_copy"><table><tr><th>
             <table class="spacer"><tbody><tr><td height="20px" style="font-size:20px;line-height:20px;">&#xA0;</td></tr></tbody></table> 
             <p>Dear %%first_name%%,</p>
-            <p>Help educators and care providers of young children meet Ohio’s <a href="http://www.earlychildhoodohio.org/sutq.stm" target="_blank"><em>Step Up To Quality</em></a> program standards with
+            <p>Help educators and care providers of young children meet Ohio’s <em>Step Up To Quality</em> program standards with
                 <a href="https://www.voyagersopris.com/professional-development/early-childhood-letrs/overview"><strong><em>LETRS</em></strong><sup>&reg;</sup>
                     <em>for Early Childhood Educators</em></a>. Our updated <em>LETRS for Early Childhood Educators</em>
                 professional
