--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- <style> -->
 </head>
 <body>
-<span class="invisible-previewline">Provide access to state-approved PD credits with LETRS for Early Childhood Educators</span>
+<span class="invisible-previewline">Provide access to state-approved PD credits with LETRS for Early Childhood Educators.</span>
 <table class="body">
 	<tr>
 		<td class="center" align="center" valign="top">
@@ -39,12 +39,12 @@
                 development fulfills more than 20 of the required hours needed to achieve or maintain a four- or
                 five-star rating within the <em>Step Up To Quality</em> rating and improvement system.</p>
 
-            <center data-parsed=""><table class="button radius float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/professional-development/early-childhood-letrs/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_REG_AR_LETRS_Pathway_teacher">REQUEST A PRESENTATION &raquo;</a></td></tr></table></td></tr></table></center>
+            <center data-parsed=""><table class="button radius float-center"><tr><td><table><tr><td><a href="https://www.voyagersopris.com/professional-development/early-childhood-letrs/contact-sales?utm_source=news&amp;utm_medium=email&amp;utm_campaign=2019_Q1_REG_AR_LETRS_Pathway_teacher">SCHEDULE A PRESENTATION &raquo;</a></td></tr></table></td></tr></table></center>
             <table class="spacer"><tbody><tr><td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td></tr></tbody></table> 
 
             <p>State-approved <em>LETRS for Early Childhood Educators</em> builds strong foundational early literacy skills for prekindergarten and kindergarten students. This professional development offers online and flexible training based on the most current scientific research to support young learners as they build literacy and language skills critical for later success.</p>
 
-            <p>Please contact me to learn how <em>LETRS for Early Childhood Educators</em> will help you meet Ohio's Step Up to Quality standards.</p>
+            <p>Please contact me to learn how <em>LETRS for Early Childhood Educators</em> will help you meet Ohio's <em>Step Up to Quality</em> standards.</p>
         </th>
 <th class="expander"></th></tr></table></th>
     </tr></tbody></table>
@@ -100,7 +100,7 @@
 
 
 <div class="preview-subject float-center" align="center">- FOR PREVIEW PURPOSES ONLY -<br><strong>SUBJECT:</strong> Achieve Your Five-Star Rating for Ohio’s Step Up To Quality Standards<br><strong>HIDDEN
-        TEASER:</strong> Provide access to state-approved PD credits with LETRS for Early Childhood Educators</div>
+        TEASER:</strong> Provide access to state-approved PD credits with LETRS for Early Childhood Educators.</div>
 
 			</center>
 		</td>
